update: 4번 5번 문제 해결
